--- a/index.html
+++ b/index.html
@@ -44,8 +44,6 @@
 		</div>
 	</nav>
 
-	<p>Aee Navigaciaa</p>
-
 	<!--- Image Slider -->
 	<div id="slides" class="carousel slide" data-ride="carousel">
 		<ul class="carousel-indicators">
@@ -86,9 +84,20 @@
 			</div>
 		</div>
 	</div>
-
 	<!--- Welcome Section -->
-
+	<div class="container-fluid padding bg-light">
+		<div class="row welcome text-center">
+			<div class="col-12">
+				<h1 class="display-4">Built with ease.</h1>
+			</div>
+			<hr>
+			<div class="col-12">
+				<p class="lead">
+					Welcome to Bootstrap
+				</p>
+			</div>
+		</div>
+	</div>
 
 	<!--- Three Column Section -->
 
