--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#"><img src="img/logo.png"></a>
+			<a class="navbar-brand" href="#">
+				<img src="img/logo.png">
+			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -74,13 +76,14 @@
 	<div class="container-fluid">
 		<div class="row jumbotron">
 			<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-				<p class="lead">A web hosting service allows individuals and organizations to make their websites
-					accessible via the World Wide Web.
+				<p class="lead">A web hosting service allows individuals and organizations to make their websites accessible via the World Wide Web.
 
 				</p>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-				<a href="#"><button type="button" class="btn btn-outline-secondary btn-lg">Web Hosting</button></a>
+				<a href="#">
+					<button type="button" class="btn btn-outline-secondary btn-lg">Web Hosting</button>
+				</a>
 			</div>
 		</div>
 	</div>
@@ -100,7 +103,25 @@
 	</div>
 
 	<!--- Three Column Section -->
-
+	<div class="container-fluid padding">
+		<div class="row text-center padding">
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<i class="fas fa-code"></i>
+				<h3>HTML5</h3>
+				<p>Build with the latest version of HTML,HTML5. </p>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<i class="fas fa-bold"></i>
+				<h3>BOOTSTRAP</h3>
+				<p>Build with the latest version of Boostrap,Bootsrap4. </p>
+			</div>
+			<div class="col-sm-12 col-md-4">
+				<i class="fab fa-css3"></i>
+				<h3>CSS3</h3>
+				<p>Build with the latest version of CSS,CSS3. </p>
+			</div>
+		</div>
+	</div>
 
 	<!--- Two Column Section -->
 
