Two Column - paragraph with image

--- a/index.html
+++ b/index.html
@@ -125,7 +125,27 @@
 
 	<!--- Two Column Section -->
 
+	<div class="container-fluid padding">
+		<div class="row padding">
+			<div class=" col-lg-6">
+				<h2>if you build it...</h2>
+				<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its
+					layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using
+					'Content here, content here', making it look like</p>
+				<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its
+					layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using
+					'Content here, content here', making it look like</p>
+				<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its
+					layout. The point of using Lorem I</p>
+				<br>
+				<a href="#" class="btn btn-primary">Learn More</a>
+			</div>
+			<div class="col-lg-6">
+				<img src="img/desk.png" class="img-fluid">
 
+			</div>
+		</div>
+	</div>
 	<!--- Fixed background -->
 
 
