Emoji collapse - section

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 				<p>Build with the latest version of CSS,CSS3. </p>
 			</div>
 		</div>
+		<hr class="my-4">
 	</div>
 
 	<!--- Two Column Section -->
@@ -142,16 +143,39 @@
 			</div>
 			<div class="col-lg-6">
 				<img src="img/desk.png" class="img-fluid">
-
 			</div>
 		</div>
 	</div>
-	<!--- Fixed background -->
 
+	<hr class="my-4">
+	<!--- Fixed background -->
+	<figure>
+		<div class="fixed-wrap">
+			<div id="fixed"></div>
+		</div>
+	</figure>
 
 	<!--- Emoji Section -->
+	<button class="fun" data-toggle="collapse" data-target="#emoji">
+		Click for fun
+	</button>
 
-
+	<div id="emoji" class="collapse">
+		<div class="row text-center">
+			<div class="col-sm-6 col-md-3">
+				<img src="img/gif/panda.gif" alt="" class="gif">
+			</div>
+			<div class="col-sm-6 col-md-3">
+				<img src="img/gif/poo.gif" alt="" class="gif">
+			</div>
+			<div class="col-sm-6 col-md-3">
+				<img src="img/gif/unicorn.gif" alt="" class="gif">
+			</div>
+			<div class="col-sm-6 col-md-3">
+				<img src="img/gif/chicken.gif" alt="" class="gif">
+			</div>
+		</div>
+	</div>
 	<!--- Meet the team -->
 
 
