Completed - Cards Section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 	<div class="container-fluid">
 		<div class="row jumbotron">
 			<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-				<p class="lead">A web hosting service allows individuals and organizations to make their websites accessible via the World Wide Web.
+				<p class="lead">A web hosting service allows individuals and organizations to make their websites
+					accessible via the World Wide Web.
 
 				</p>
 			</div>
@@ -130,13 +131,18 @@
 		<div class="row padding">
 			<div class=" col-lg-6">
 				<h2>if you build it...</h2>
-				<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its
-					layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using
+				<p>It is a long established fact that a reader will be distracted by the readable content of a page when
+					looking at its
+					layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,
+					as opposed to using
 					'Content here, content here', making it look like</p>
-				<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its
-					layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using
+				<p>It is a long established fact that a reader will be distracted by the readable content of a page when
+					looking at its
+					layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,
+					as opposed to using
 					'Content here, content here', making it look like</p>
-				<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its
+				<p>It is a long established fact that a reader will be distracted by the readable content of a page when
+					looking at its
 					layout. The point of using Lorem I</p>
 				<br>
 				<a href="#" class="btn btn-primary">Learn More</a>
@@ -177,11 +183,57 @@
 		</div>
 	</div>
 	<!--- Meet the team -->
-
+	<div class="container-fluid padding">
+		<div class="row welcome text-center">
+			<div class="col-12">
+				<h1 class="display-4">Meet the Team</h1>
+			</div>
+			<hr>
+		</div>
+	</div>
 
 	<!--- Cards -->
 
-
+	<div class="container-fluid padding">
+		<div class="row padding">
+			<div class="col-md-4">
+				<div class="card">
+					<img class="card-img-top" src="img/team1.png">
+					<div class="card-body">
+						<h4 class="card-title">
+							John Doe
+						</h4>
+						<p class="card-text">John is an internet enterpreneur with almost 20 years of exprience.</p>
+						<a href="#" class="btn btn-outline-secondary">See Profile</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="card">
+					<img class="card-img-top" src="img/team2.png">
+					<div class="card-body">
+						<h4 class="card-title">
+							Mary Doe
+						</h4>
+						<p class="card-text">John is an internet enterpreneur with almost 20 years of exprience.</p>
+						<a href="#" class="btn btn-outline-secondary">See Profile</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="card">
+					<img class="card-img-top" src="img/team3.png">
+					<div class="card-body">
+						<h4 class="card-title">
+							Phil Doe
+						</h4>
+						<p class="card-text">John is an internet enterpreneur with almost 20 years of exprience.</p>
+						<a href="#" class="btn btn-outline-secondary">See Profile</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	<!--- Two Column Section -->
 
 
