--- a/index.html
+++ b/index.html
@@ -235,10 +235,42 @@
 		</div>
 	</div>
 	<!--- Two Column Section -->
-
+	<div class="container-fluid padding">
+		<div class="row padding">
+			<div class=" col-lg-6">
+				<h2>Out Philosophy</h2>
+				<p>It is a long established fact that a reader will be distracted by the readable content of a page when
+				</p>
+				<p>It is a long established fact that a reader will be distracted by the readable content of a page when
+					looking at its
+					layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,
+					as opposed to using
+					'Content here, content here', making it look like</p>
+				<br>
+				<a href="#" class="btn btn-primary">Learn More</a>
+			</div>
+			<div class="col-lg-6">
+				<img src="img/bootstrap2.png" class="img-fluid">
+			</div>
+		</div>
+	</div>
 
 	<!--- Connect -->
-
+	<div class="container-fluid">
+		<div class="row text-center padding">
+			<div class="col-12">
+				<h2>Connect</h2>
+			</div>
+			<div class="col-12 social padding">
+				<a href="#"><i class="fab fa-facebook"></i></a>
+				<a href="#"><i class="fab fa-twitter"></i></a>
+				<a href="#"><i class="fab fa-google-plus-g"></i></a>
+				<a href="#"><i class="fab fa-instagram"></i></a>
+				<a href="#"><i class="fab fa-youtube"></i></a>
+				</a>
+			</div>
+		</div>
+	</div>
 
 	<!--- Footer -->
 
