--- a/index.html
+++ b/index.html
@@ -273,7 +273,41 @@
 	</div>
 
 	<!--- Footer -->
-
+	<footer>
+		<div class="container-fluid padding">
+			<div class="row text-center">
+				<div class="col-md-4">
+					<img src="img/w3newbie.png" alt="">
+					<hr class="light">
+					<p>555-555-5555</p>
+					<p>email@myemail.com</p>
+					<p>100 Street Name</p>
+					<p>City, State, 0000</p>
+				</div>
+				<div class="col-md-4">
+					<hr class="light">
+					<h5>Our hours</h5>
+					<hr class="light">
+					<p>Monday: 9am - 5pm</p>
+					<p>Monday: 9am - 5pm</p>
+					<p>Monday: 9am - 5pm</p>
+				</div>
+				<div class="col-md-4">
+					<hr class="light">
+					<h5>Service Area</h5>
+					<hr class="light">
+					<p>City, State, 0000</p>
+					<p>City, State, 0000</p>
+					<p>City, State, 0000</p>
+					<p>City, State, 0000</p>
+				</div>
+				<div class="col-12">
+					<hr class="light">
+					<h5>&copy; w3newbie.com</h5>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 
 
